layout issues on ipad/mobile

--- a/fluxx.css
+++ b/fluxx.css
@@ -343,7 +343,7 @@
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
+  grid-gap: 8px;
 }
 
 .flx-table .flx-rules .flx-card-stack {
@@ -366,6 +366,15 @@
   grid-column: 1 / 3;
   -ms-grid-row: 2;
   grid-row: 2;
+}
+
+@media (max-width: 1080px) {
+  .flx-table .flx-rules {
+    grid-gap: 4px;
+  }
+  .flx-table .flx-rules #limitsStock {
+    left: 80px;
+  }
 }
 
 .flx-other-players {
